[gd_scene load_steps=21 format=2]

[ext_resource path="res://images/card/5.png" type="Texture" id=1]
[ext_resource path="res://images/card/6.png" type="Texture" id=2]
[ext_resource path="res://images/card/4.png" type="Texture" id=3]
[ext_resource path="res://images/card/1.png" type="Texture" id=4]
[ext_resource path="res://images/card/8.png" type="Texture" id=5]
[ext_resource path="res://images/card/7.png" type="Texture" id=6]
[ext_resource path="res://images/card/2.png" type="Texture" id=7]
[ext_resource path="res://images/card/0.png" type="Texture" id=8]
[ext_resource path="res://images/card/9.png" type="Texture" id=9]
[ext_resource path="res://images/card/3.png" type="Texture" id=10]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://images/card/selected.png" type="Texture" id=12]
[ext_resource path="res://objects/Card.gd" type="Script" id=13]
[ext_resource path="res://res/dialog.tres" type="StyleBox" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "8",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "7",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "9",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "card_anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 36
outline_size = 2
outline_color = Color( 0.368627, 0.32549, 0.901961, 1 )
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 49.174, 70.2807 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 2
outline_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 1
outline_color = Color( 0.435294, 0.435294, 0.435294, 1 )
font_data = ExtResource( 11 )

[node name="Card" type="Node2D"]
position = Vector2( 57.6848, 77.1628 )
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/card_anim = SubResource( 2 )

[node name="Name" type="Label" parent="."]
margin_left = -44.75
margin_top = 28.5
margin_right = 47.25
margin_bottom = 65.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ABCDEF"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="Sprite" parent="."]
visible = false
position = Vector2( 0.110107, -0.299606 )
scale = Vector2( 1.2, 1.1 )
texture = ExtResource( 12 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
input_pickable = true
collision_layer = 512
collision_mask = 2147484160

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0.561234, -0.561211 )
shape = SubResource( 4 )

[node name="Description" type="RichTextLabel" parent="."]
visible = false
margin_left = -44.9734
margin_top = -228.947
margin_right = 244.027
margin_bottom = -88.9467
rect_pivot_offset = Vector2( 0.436867, 137.506 )
custom_styles/normal = ExtResource( 14 )
custom_fonts/bold_font = SubResource( 6 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[b]NAME[/b]
Description"
text = "NAME
Description"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="KinematicBody2D" to="." method="_on_KinematicBody2D_input_event"]
[connection signal="mouse_entered" from="KinematicBody2D" to="." method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="KinematicBody2D" to="." method="_on_KinematicBody2D_mouse_exited"]
